tf/modules/network/igw.tf
# Create VPC Internet Gateway

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = format("%s-igw", var.env)
  }
}
